<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/search_menu"
    android:title="@string/search"
    app:actionViewClass="android.support.v7.widget.SearchView"
    android:icon="@drawable/search_icon"
    app:showAsAction="collapseActionView|always"/>
</menu>