<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/fav_icon_white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/setting_menu"
        android:orderInCategory="10"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>