...
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/twenty_five_dp" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:layout_below="@id/tool_bar"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>


